# pybind11_cmake_example

./: CMakeLists.txt  LICENSE  README.md  library.cpp  library.h  wrapper.cpp
